<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".sign_in">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:scrollbars="vertical"
        style="@style/scrollbar_shape_style"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <Button
                android:id="@+id/btn_go_back"
                android:layout_width="wrap_content"
                android:layout_height="0dp"


                android:background="@drawable/btn_selector_back_cancel"


                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_info"


                android:text="@string/go_back"
                android:layout_marginStart="@dimen/dimens_45px"

                android:textColor="@color/color_text_login_and_cadre"
                android:gravity="center"
                android:textSize="@dimen/txt_15_sp"
                android:textAllCaps="false"
                android:textStyle="bold"

                android:drawableEnd="@drawable/ic_home_plean_"
                android:drawableRight="@drawable/ic_home_plean_"


                android:drawablePadding="@dimen/dimens_55px"
                tools:ignore="RtlSymmetry"
                android:layout_marginLeft="@dimen/dimens_45px" />

            <ImageView
                android:id="@+id/img_signin"
                android:layout_width="@dimen/dimens_550px"
                android:layout_height="@dimen/dimens_550px"
                android:background="@drawable/logo_forground"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/dimens_250px"
                tools:ignore="ContentDescription"
                />
            <TextView
                android:id="@+id/text"
                android:layout_width="@dimen/dimens_550px"
                android:layout_height="wrap_content"
                android:padding="@dimen/demens_23px"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_signin"
                app:layout_constraintBottom_toBottomOf="@id/img_signin"
                android:text="@string/sign_in_with_us"
                android:gravity="center"
                android:textColor="@color/color_text_login_and_cadre"
                android:textStyle="bold"
                android:background="@drawable/back_corner_rounded"
                android:lineSpacingExtra="@dimen/dimens_5px"
                />





            <Button
                android:id="@+id/fb_log"
                android:layout_width="@dimen/dimens_850px"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/dimens_180px"
                android:background="@drawable/btn_selector_fb"
                android:text="@string/sign_in_with_fb"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.95"
                android:textColor="#E1E1E6"
                android:textStyle="bold"
                android:drawableRight="@drawable/ic_logo_fb"
                android:drawableEnd="@drawable/ic_logo_fb"
                android:gravity="center_vertical|start"
                android:padding="@dimen/dimens_45px"
                android:drawablePadding="@dimen/demens_23px"
                android:textSize="@dimen/txt_15_sp"/>


            <Button
                android:id="@+id/anynomse_log"
                android:layout_width="@dimen/dimens_850px"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/dimens_180px"
                android:background="@drawable/btn_selector_any"
                android:text="@string/log_in_as_a_visitor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/google_log"
                app:layout_constraintTop_toBottomOf="@id/text"
                android:layout_marginTop="@dimen/dimens_420px"

                android:layout_marginBottom="@dimen/dimens_55px"
                android:textColor="@color/color_text_login_and_cadre"
                android:drawableEnd="@drawable/account"
                android:textStyle="bold"
                android:gravity="center_vertical|start"
                android:padding="@dimen/dimens_45px"
                android:drawablePadding="@dimen/demens_23px"
                android:textSize="@dimen/txt_15_sp"
                android:drawableRight="@drawable/account" />

            <ImageButton
                android:id="@+id/btn_info"
                android:layout_width="@dimen/dimen_100_px"
                android:layout_height="@dimen/dimen_100_px"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/dimens_97px"
                android:layout_marginEnd="@dimen/dimens_32px"
                android:layout_marginRight="@dimen/dimens_32px"
                android:src="@drawable/info"
                android:background="@drawable/selector_retate_table"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/google_log"
                android:layout_width="@dimen/dimens_850px"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/dimens_180px"
                android:background="@drawable/btn_selector_google"
                android:text="@string/sign_in_with_go"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/fb_log"
                android:layout_marginBottom="@dimen/dimens_55px"
                android:textColor="#E6E1E1"
                android:drawableEnd="@drawable/ic_logo_google"
                android:textStyle="bold"
                android:gravity="center_vertical|start"
                android:padding="@dimen/dimens_45px"
                android:drawablePadding="@dimen/demens_23px"
                android:textSize="@dimen/txt_15_sp"
                android:drawableRight="@drawable/ic_logo_google" />

            <TextView
                android:id="@+id/sign"
                android:layout_width="@dimen/dimens_850px"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/dimens_180px"
                android:text="@string/Login_while"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.95"
                android:textColor="@color/color_text_login_and_cadre"
                android:textStyle="bold"
                android:textSize="@dimen/txt_15_sp"
                android:gravity="center"
                android:visibility="invisible"/>


            <pl.pawelkleczkowski.customgauge.CustomGauge
                android:id="@+id/progressbar"
                android:layout_width="@dimen/dimens_420px"
                android:layout_height="@dimen/dimens_420px"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text"
                app:layout_constraintBottom_toTopOf="@id/sign"
                android:paddingBottom="@dimen/dimens_10_dp"
                android:paddingLeft="@dimen/dimens_10_dp"
                android:paddingRight="@dimen/dimens_10_dp"
                android:paddingTop="@dimen/dimens_10_dp"


                app:gaugePointEndColor="@color/color_text_login_and_cadre"
                app:gaugePointStartColor="@color/color_text_login_and_cadre"
                app:gaugeStartAngle="270"
                app:gaugeStrokeCap="ROUND"
                app:gaugeStrokeColor="@color/background_transparent"
                app:gaugeStrokeWidth="@dimen/dimens_10_dp"
                app:gaugeSweepAngle="360"

                android:visibility="invisible"
                />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_download"
                app:lottie_rawRes="@raw/add_succes"

                android:layout_width="@dimen/dimens_420px"
                android:layout_height="@dimen/dimens_420px"
                app:layout_constraintStart_toStartOf="@id/progressbar"
                app:layout_constraintEnd_toEndOf="@id/progressbar"
                app:layout_constraintTop_toTopOf="@id/progressbar"
                app:layout_constraintBottom_toBottomOf="@id/progressbar"
                android:visibility="invisible"
                />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_wait"
                app:lottie_rawRes="@raw/load"
                app:lottie_speed="2"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"

                android:layout_width="@dimen/dimens_550px"
                android:layout_height="@dimen/dimens_550px"
                app:layout_constraintStart_toStartOf="@id/progressbar"
                app:layout_constraintEnd_toEndOf="@id/progressbar"
                app:layout_constraintBottom_toBottomOf="@id/fb_log"
                android:visibility="invisible"
                />

            <TextView
                android:id="@+id/pourcentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/lottie_download"
                app:layout_constraintEnd_toEndOf="@id/lottie_download"
                app:layout_constraintTop_toTopOf="@id/lottie_download"
                app:layout_constraintBottom_toBottomOf="@id/lottie_download"
                android:text="@string/_100"
                android:textStyle="bold"
                android:textSize="@dimen/txt_15_sp"
                android:textColor="@color/color_text_login_and_cadre"
                android:visibility="invisible"
                />
            <TextView
                android:id="@+id/pourcent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/pourcentage"
                app:layout_constraintBottom_toBottomOf="@id/pourcentage"
                android:text="@string/pourcent"
                android:textStyle="italic"
                android:textSize="@dimen/txt_10_sp"
                android:textColor="@color/color_text_login_and_cadre"
                android:visibility="invisible"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>